--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# svg images
+*.svg
+
 # =========================
 # Operating System Files
 # =========================
