--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
 }
