--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ ehthumbs.db
 
 workspace.xml
 
+.gradle/*
+
 # Folder config file
 Desktop.ini
 
@@ -24,6 +26,7 @@ $RECYCLE.BIN/
  
 # svg images
 *.svg
+*.json
 
 #pictures
 *.png
