--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
     repositories {
-        mavenCentral() // or jcenter()
+        jcenter()
+        maven { url "https://jitpack.io" }
     }
 
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 
@@ -30,11 +32,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:appcompat-v7:21.0.3'
-
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.github.clans:fab:1.6.2'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+	compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    compile 'com.google.android.gms:play-services:8.3.0'
 }
+
