animating menu, back button action, checking connection
animating menu, back button action, checking connection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="martinmatko.anatomy" >
     <application
         android:allowBackup="true"
-        android:icon="@drawable/b02"
+        android:icon="@drawable/s02"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
@@ -14,15 +14,15 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main">
         </activity>
         <activity
             android:name=".RegisterActivity"
