--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,9 @@ android {
 
 dependencies {
     compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:appcompat-v7:22.0.3'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
-    compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.github.bluejamesbond:textjustify-android:2.1.1'
 }
 
