--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,6 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name=".LoginActivity1"
-            android:label="@string/app_name" />
-        <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
@@ -34,14 +31,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegisterActivity"
-            android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ForgotPassActivity"
-            android:label="@string/title_activity_forgot"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
@@ -50,7 +39,8 @@
         <activity android:name=".LanguageActivity" />
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
