--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.0.0'
     }
 }
 
@@ -15,13 +15,13 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "martinmatko.anatomy"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.0.1"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -32,10 +32,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.bluejamesbond:textjustify-android:2.1.1'
-    compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-}
+    compile 'com.android.support:design:23.2.1'}
 
